--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,12 @@
         "symfony/yaml": "4.3.*"
     },
     "require-dev": {
+        "easycorp/easy-log-handler": "^1.0.7",
         "sensiolabs/security-checker": "^6.0",
+        "symfony/debug-bundle": "*",
+        "symfony/monolog-bundle": "^3.0",
+        "symfony/profiler-pack": "*",
+        "symfony/var-dumper": "*",
         "symfony/web-server-bundle": "4.3.*"
     },
     "config": {
